# harzoo

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/scripts/: publish-pypi.sh  strip_pypi_license_file.py
.github/workflows/: publish-pypi.yml
assets/config/: README.md  config.json
assets/config/profiles/: harzoo_builder.md
assets/config/tools/: browser.py  compact_context.py  document_edit.py  document_generate.py  document_read.py  edit.py  glob.py  grep.py  gui_actuator.py  gui_screenshot.py  load_skill.py  read.py  shell.py  subagent.py  switch_profile.py  webfetch.py  write.py
assets/templates/: chain_template.md  profile_template.md  skill_template.md  tool_template.py
docs/: config.md  design.md  develop.md  index.md  install.md  mkdocs_doc_hooks.py
docs/javascripts/: baidu-hm.js
docs/stylesheets/: extra.css
src/harzoo/: __init__.py  main.py  setup.py
src/harzoo/agent/: __init__.py  agent.py  engine.py  start.py
src/harzoo/agent/components/: __init__.py  paths.py  profile.py  prompt.py  queue_out.py  tool_hub.py  tool_loader.py  util.py
src/harzoo/agent/kernel/: __init__.py  llm.py  llm_util.py  message.py  tool.py
src/harzoo/tui/: __init__.py  app.py  controller.py  processing.py  widgets.py
