[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harzoo"
version = "0.1.10"
description = "Terminal agent framework with pluggable tools and TUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Harzoo Maintainers" }
]
keywords = ["agent", "tui", "tools", "automation"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "openai>=1.0.0",
  "PyYAML>=6.0",
  "textual>=0.50.0",
]

[project.urls]
Homepage = "https://github.com/leeharhar/harzoo"
Repository = "https://github.com/leeharhar/harzoo"
Issues = "https://github.com/leeharhar/harzoo/issues"

[project.optional-dependencies]
web = [
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
]
jupyter = [
  "jupyterlab>=4.0.0",
  "ipykernel>=6.0.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[project.scripts]
harzoo = "harzoo.main:main"

[tool.setuptools.packages.find]
where = ["src"]
